Updated some starter tut code for Java 17